tests/NormalTests/paczka1/fuzzy1/37745081.err
Error in line 10: KDuqQEGOnp A232 96,4
Error in line 13: A363 A232 63,5
Error in line 28: llWixDmOps A628 71,6
Error in line 26: Nl3q A628 75,3
Error in line 33: Nl3q S705 79,0
